ISSUE: console error for missing favicon SOL: add favicon to project and provide link in html
ISSUE: input field very hard to see
SOL: give the input field a noticeable border and a lighter background that also highlights the embeded placeholder

ISSUE: App only allows one email to be added at a time, then clears anything previously added to an email address when re-entering it
SOL: Using browser localStorage, user can create and view a collection, enter a different email adress and switch onto the collection associated with the new address. The app fully allows switching between any number of collections associated with any number of validated email addresses, without clearing the associated collection (i.e images previously added to the collection are persited).

ISSUE: The same image can be assigned to multiple emails
SOL: When switching between multiple email addresses, the image currently on display can be added to multiple collections. However,
each user has a private collection, and privacy is maintained when the user account changes.

--- a/application.scss
+++ b/application.scss
@@ -22,13 +22,11 @@ body{
             padding: 0 !important;
             input{
                 padding: 30px 20px; 
-                background-color: rgb(26,36,33);
-                border: none;
+                background-color: lighten(rgb(26,36,33), 10%);
+                border: solid rgb(0,73,83) 1rem ;
+                border-right: none;
                 border-radius: 0 !important;
                 outline: none;
-                &:focus{
-                    background-color: lighten(rgb(26,36,33), 10%);
-                }
             }
             button{
                 font-size: .8rem;
@@ -59,10 +57,6 @@ body{
                 }
             &#add-random-image-to-collection-button{
                 background-color: rgb(0,73,83);
-                // padding: .1rem 0 .3rem 0;
-                // font-size: 1.5rem;
-                // display: flex;
-                // justify-content: center;
                 &:hover{
                     background-color: lighten(rgb(0,73,83), 10%);
                 }
